Remove deprecated newInstance method